syntax = "proto3";

import "google/api/annotations.proto";
import "CommonDto.proto";
import "UserDto.proto";

option csharp_namespace = "Cube.Grpc.Service";

package UserService;

service UserService{
	rpc GetUserById(CommonDto.Id) returns (UserDto.User){
		option (google.api.http) = {
			get: "/v1/UserApi/GetUserById/{guid}"
		};
	};
}