syntax = "proto3";

option csharp_namespace = "Cube.User.API.Protos";

package UserServiceDto;

message Id{
	string Guid = 1;
}

message User{
	string Username = 1;
	string PhoneNumber = 2;
}